<resources>
    <string name="app_name">LucasAnDroidERestaurant</string>
    <string name="DefaultCategoy">DefaultCategory</string>
    <string name="buttonEntrees">Entrées</string>
    <string name="buttonPlats">Plats</string>
    <string name="buttonDesserts">Desserts</string>
    <string name="itemName">ItemName</string>
    <string name="none" />
    <string name="platPrice">10 €</string>
    <string name="textBle">Lancer le scan BLE</string>
    <string name="stateButton">play</string>
    <string name="MacAdress">00:00:00:00:00:00</string>
    <string name="BleItemName">Device Unknown</string>
    <string name="DeviceDistance">-90</string>

</resources>